2003-12-01  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Epson-Stylus_CX5400.xml,
	  printer/Epson-Stylus_Photo_R300.xml,
	  printer/Epson-Stylus_Photo_RX500.xml: Added new Epson inkjet 
	  printers.

	* printer/Epson-Stylus_CX6400.xml: Updated text.

	* printer/Epson-Stylus_CX8400.xml: Removed. This printer does not
	  exist.

2003-11-30  Till Kamppeter <till.kamppeter@gmx.net>

	* driver/Postscript.ppd: Fixed bug of InputSlot, Duplex, and
	  Resolution being ignored.

2003-11-26  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-LaserJet_1010.xml, printer/HP-LaserJet_1012.xml,
	  printer/HP-LaserJet_1015.xml: Updated text and rating of the
	  LaserJet 101x series as they do not work reliably as PCL-5e
	  printers.

	* printer/Canon-S100.xml: Changed recommended driver to "bjc600",
	  this printer does not work correctly with GIMP-Print.

	* printer/Epson-Stylus_CX6400.xml: Updated text.

2003-11-22  Till Kamppeter <till.kamppeter@gmx.net>

	* README: Updated "Dependencies" section.

	* USAGE: Fixed typo.

	* *: Tagged all files of the repository with "foomatic-3_0-bp",
	  started stable branch "foomatic-3_0-branch".
	
2003-11-20  Till Kamppeter <till.kamppeter@gmx.net>

	* opt/93.xml, opt/eplXXXX-NumCopies.xml, opt/foo2zjs-Copies.xml,
	  gdi-Copies.xml: Reduced maximum amount of copies from 999 to
	  100, as the Adobe PostScript driver for Windows crashes on an
	  option with 999 choices in the PPD file. See

	  http://www.cups.org/newsgroups.php?s2623+gcups.general+v2632

2003-10-27  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Epson-AcuLaser_C1000.xml: Updated text.

	* driver/lj4dith.xml, driver/ljet4, opt/6.xml: The Epson AcuLaser
	  C4000 also understands PCL 5e, added it to "ljet4" and
	  "lj4dith".

	* printer/Epson-AcuLaser_C900.xml,
	  printer/Epson-AcuLaser_C1900.xml,
	  printer/Epson-AcuLaser_C1900PS.xml, driver/Postscript.xml,
	  driver/lj4dith.xml, driver/ljet4.xml, opt/159.xml, opt/6.xml,
	  opt/Postscript-Resolution.xml,