@@ -23,16 +23,20 @@
     </text>
   </lang>
   <autodetect>
-  <!--no known parport probe information--></autodetect>
+  <!--no known parport probe information-->
+  </autodetect>
   <functionality>A</functionality>
-  <driver>hpijs</driver>
+  <driver>gimp-print-ijs</driver>
   <!--no "contrib_url"-->
   <comments>
     <en>
+
     The LaserJet 3P with PCL5 extension is nearly compatible to the
     LaserJet 4L with the exception that it does not support PJL
     (Printing Job Language). So it can be used with the
-    &quot;ljet4&quot; GhostScript driver.&lt;p&gt;
+    &quot;ljet4&quot; GhostScript driver or with GIMP-Print. Do not
+    use HPIJS, as it always adds PJL commands which get printed on an
+    extra page.&lt;p&gt;
 
     Make sure you have at least 2MB RAM, otherwise it won&apos;t be
     able to print complex pages.&lt;p&gt;
