@@ -1,3 +1,9 @@
+2003-12-10  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/HP-LaserJet_3P_w_PCL5.xml: Switched recommended driver to
+	  "gimp-print-ijs", as this printer does not support PJL and the
+	  HPIJS driver always sends PJL commands.
+
 2003-12-01  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/Epson-Stylus_CX5400.xml,
